<resources>
    <string name="app_name">Cerca Trova</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_rationale_location">"Location permissions are needed for providing
        high accuracy GPS triangulation"</string>
    <string name="police">Police</string>
    <string name="ambulance">Ambulance</string>
    <string name="fire_fighter">FIre Fighter</string>
    <string name="title_activity_maps">Map</string>
    <string name="new_account">No account yet? Create one</string>
    <string name="cerca_trova">Cerca Trova</string>
    <string name="contact">Contact Personnel</string>
    <string name="responding_unit">Responding Unit:</string>
    <string name="shared_preference_file">com.thunderstruck.nilanjan.cercatrova.data</string>
    <string name="authenticating">Authenticating…</string>
    <string name="register">Register</string>
    <string name="invalid_field">This field is invalid!</string>

</resources>
